--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@babel/types": "^7.17.0",
     "@types/fs-extra": "^9.0.13",
     "fs-extra": "^10.0.1",
+    "glob": "^7.2.0",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@types/babel__generator": "^7.6.4",
+    "@types/glob": "^7.2.0",
     "@types/node": "^17.0.23",
     "ts-node": "^10.7.0"
   }
